# nicew-core

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  WalletCore.podspec  registry.json
cmake/: CompilerWarnings.cmake  FindHostPackage.cmake  Protobuf.cmake  StandardSettings.cmake  StaticAnalyzers.cmake
codegen/lib/: code_generator.rb  coin_test_gen.rb  java_helper.rb  jni_helper.rb  parser.rb  swift_helper.rb  wasm_cpp_helper.rb
docs/: registry.md
include/NiceWCore/: NWAES.h  NWAESPaddingMode.h  NWAccount.h  NWAnyAddress.h  NWAnySigner.h  NWBase.h  NWBase32.h  NWBase58.h  NWBase64.h  NWBitcoinAddress.h  NWBitcoinProto.h  NWBitcoinScript.h  NWBitcoinSigHashType.h  NWBlockchain.h  NWCoinType.h  NWCoinTypeConfiguration.h  NWCommonProto.h  NWCurve.h  NWData.h  NWDataVector.h  NWDerivation.h  NWEthereumAbi.h  NWEthereumAbiFunction.h  NWEthereumAbiValue.h  NWEthereumChainID.h  NWEthereumProto.h  NWHDVersion.h  NWHDWallet.h  NWHRP.h  NWHash.h  NWMnemonic.h  NWPBKDF2.h  NWPrivateKey.h  NWPrivateKeyType.h  NWPublicKey.h  NWPublicKeyType.h  NWPurpose.h  NWStoredKey.h  NWStoredKeyEncryptionLevel.h  NWString.h  (+2 more)
protobuf-plugin/: CMakeLists.txt  c_typedef.cc  swift_typealias.cc
src/: Base32.h  Base58.cpp  Base58.h  Base58Address.h  Base64.cpp  Base64.h  Bech32.cpp  Bech32.h  Bech32Address.cpp  Bech32Address.h  BinaryCoding.cpp  BinaryCoding.h  Cbor.cpp  Cbor.h  Coin.cpp  Coin.h  CoinEntry.h  Crc.cpp  Crc.h  Data.cpp  Data.h  DerivationPath.cpp  DerivationPath.h  Encrypt.cpp  Encrypt.h  HDWallet.cpp  HDWallet.h  Hash.cpp  Hash.h  HexCoding.h  KeyPair.h  Mnemonic.cpp  Mnemonic.h  PrivateKey.cpp  PrivateKey.h  PublicKey.cpp  PublicKey.h  Result.h  TransactionCompiler.cpp  TransactionCompiler.h  (+1 more)
src/Bitcoin/: Address.cpp  Address.h  Amount.h  CashAddress.cpp  CashAddress.h  Entry.cpp  Entry.h  FeeCalculator.cpp  FeeCalculator.h  InputSelector.cpp  InputSelector.h  OpCodes.h  OutPoint.cpp  OutPoint.h  Script.cpp  Script.h  SegwitAddress.cpp  SegwitAddress.h  SigHashType.h  SignatureBuilder.cpp  SignatureBuilder.h  SignatureVersion.h  Signer.cpp  Signer.h  SigningInput.cpp  SigningInput.h  Transaction.cpp  Transaction.h  TransactionBuilder.cpp  TransactionBuilder.h  TransactionInput.cpp  TransactionInput.h  TransactionOutput.cpp  TransactionOutput.h  TransactionPlan.h  TransactionSigner.cpp  TransactionSigner.h  UTXO.h
src/Ethereum/: Address.cpp  Address.h  AddressChecksum.cpp  AddressChecksum.h  ContractCall.cpp  ContractCall.h  Entry.cpp  Entry.h  RLP.cpp  RLP.h  Signer.cpp  Signer.h  Transaction.cpp  Transaction.h
src/Keystore/: AESParameters.cpp  AESParameters.h  Account.cpp  Account.h  EncryptionParameters.cpp  EncryptionParameters.h  PBKDF2Parameters.cpp  PBKDF2Parameters.h  ScryptParameters.cpp  ScryptParameters.h  StoredKey.cpp  StoredKey.h
src/algorithm/: erase.h  sort_copy.h  to_array.h
src/interface/: NWAES.cpp  NWAccount.cpp  (+25 more)
swift/: Podfile  common-xcframework.yml  cpp.xcconfig  include  project.yml  protobuf  trezor-crypto  trezor-crypto   wallet-core
tools/: generate-files  ios-release  ios-test  library  lint
trezor-crypto/: CMakeLists.txt
walletconsole/: CMakeLists.txt  main.cpp
(+105 files in other folders)
